// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-1fdj0xh {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1fdj0xh[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1fdj0xh:hover[aria-disabled='false'] .e1duuirp1[id=test-test]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1fdj0xh:hover[aria-disabled='false'] .e1duuirp1[id=test-test]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1fdj0xh:hover[aria-disabled='false'] .e1duuirp1[id=test-test][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1fdj0xh:hover[aria-disabled='false'] .e1duuirp1[id=test-test][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1fdj0xh[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1fdj0xh[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1fdj0xh[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1n4xajr {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1n4xajr+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1n4xajr:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1n4xajr:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-1n4xajr[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1n4xajr:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1n4xajr:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1n4xajr[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1n4xajr[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-1fdj0xh e1duuirp0"
      data-checked="false"
      for="test-test"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-1n4xajr e1duuirp1"
        id="test-test"
        name="test"
        type="radio"
        value="test"
      />
      <svg
        class="cache-jsk10b e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1imu6pm {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1imu6pm[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1imu6pm:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1imu6pm:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1imu6pm:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1imu6pm:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1imu6pm[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1imu6pm[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1imu6pm[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1n4xajr {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1n4xajr+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1n4xajr:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1n4xajr:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-1n4xajr[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1n4xajr:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1n4xajr:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1n4xajr[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1n4xajr[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-1imu6pm e1duuirp0"
      data-checked="true"
      for="test-checked"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-1n4xajr e1duuirp1"
        id="test-checked"
        name="test"
        type="radio"
        value="checked"
      />
      <svg
        class="cache-jsk10b e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field checked
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1o5kav0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1o5kav0[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1o5kav0:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1o5kav0:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1o5kav0:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1o5kav0:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1o5kav0[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1o5kav0[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1o5kav0[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1n4xajr {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1n4xajr+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1n4xajr:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1n4xajr:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-1n4xajr[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1n4xajr:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1n4xajr:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1n4xajr[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1n4xajr[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="cache-1o5kav0 e1duuirp0"
      data-checked="false"
      for="test-disabled"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="cache-1n4xajr e1duuirp1"
        disabled=""
        id="test-disabled"
        name="test"
        type="radio"
        value="disabled"
      />
      <svg
        class="cache-jsk10b e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field disabled
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1o6cmnv {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1o6cmnv[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1o6cmnv:hover[aria-disabled='false'] .e1duuirp1[id=test-events]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1o6cmnv:hover[aria-disabled='false'] .e1duuirp1[id=test-events]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1o6cmnv:hover[aria-disabled='false'] .e1duuirp1[id=test-events][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1o6cmnv:hover[aria-disabled='false'] .e1duuirp1[id=test-events][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1o6cmnv[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1o6cmnv[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1o6cmnv[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1n4xajr {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1n4xajr+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1n4xajr:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1n4xajr:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-1n4xajr[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1n4xajr:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1n4xajr:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1n4xajr[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1n4xajr[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-1o6cmnv e1duuirp0"
      data-checked="true"
      for="test-events"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-1n4xajr e1duuirp1"
        id="test-events"
        name="test"
        type="radio"
        value="events"
      />
      <svg
        class="cache-jsk10b e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field events
    </label>
  </form>
</DocumentFragment>
`;
